# sea

./: .gitignore  README.md  docker-compose.yml  llama-swap.config.yaml  main.py  pyproject.toml
searxng-docker/searxng/: settings.example.yml
src/: constants.py  utils.py
src/llm/: client.py  evolution.py  history.py  pipeline.py  tools.py  utils.py
src/llm/session/: session.py  state.py
src/llm/session/actor/: actor.py  assistant.py  system.py  tool.py  user.py
src/llm/session/message/: assistant.py  system.py  tool.py  user.py
src/llm/session/operations/: actor.py  injection.py  operations.py  round.py  turn.py
src/llm/spawner/: assistant.py  tool.py  utils.py
src/vector_db/: client.py
