[project]
name = "sea"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "chromadb>=1.0.20",
    "httpx>=0.28.1",
    "openai>=1.100.2",
    "pydantic>=2.11.7",
    "readability-lxml>=0.8.4.1",
    "selenium>=4.35.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.9",
]
